2014-03-07

	* manual/ja/Makefile.am
	  manual/ja/header.txt: added meta tag to prevent encoding
	  auto-detection failure with IE.

2014-03-07

	* src/about.c: updated copyright year.
	* src/sylpheed.rc.in: updated copyright year.

2014-03-07

	* INSTALL
	  INSTALL.ja
	  README
	  README.ja
	  LICENSE: updated.

2014-02-28

	* libsylph/ssl.c
	  src/sslmanager.c
	  libsylph/ssl_hostname_validation.[ch]: validate SSL certificate
	  hostname (#167).
	* libsylph/socks.c: replace sock->hostname with endpoint for hostname
	  check.

2013-12-20

	* src/addr_compl.c: address_completion_create_completion_window():
	  use gdk_window_get_origin() instead of deprecated
	  gdk_window_get_deskrelative_origin() (fixes wrong completion list
	  on OS X).

2013-12-19

	* src/main.c
	  src/manual.c: OS X: modified for bundle folder structure.
	* makeosx.sh: OS X: added build script for OS X.
	* macosx/bundle: OS X: added files for gtk-mac-bundler.

2013-12-13

	* libsylph/utils.c: set_startup_dir(): OS X: set application bundle
	  directory rather than /.
	* configure.in
	  libsylph/Makefile.am: OS X: added -xobjective-c option.

2013-11-29

	* version 3.4.0beta7

2013-11-28

	* libsylph/md5.c: MD5Final(): zero-clear the whole MD5Context struct
	  as intended.

2013-11-28

	* src/syldap.c:
	  syldap_test_connect():
	  syldap_read_basedn():
	  NULL check argument first.
	* src/vcard.c: vcard_build_items(): dereference nodeRemarks only if
	  it's non-null.

2013-11-28

	* src/rpop3.c: rpop3_retr_recv(): check error of
	  procheader_parse_file().

2013-11-28

	* libsylph/procmime.c: procmime_scan_multipart_message(): fixed MIME
	  nest level restriction not working.

2013-11-28

	* libsylph/ssl.c: ssl_done(): check if fp != NULL.
	* src/textview.c:
	  textview_popup_menu_activate_open_uri_cb():
	  textview_event_after():
	  prevent null dereference of msginfo.
	* src/summaryview.c: summary_unthread(): first check if
	  summaryview->folder_item is non-null.

2013-11-28
