@@ -1,3 +1,8 @@
+2014-03-10
+
+	* src/summaryview.c: added an empty column to the right-end of the
+	  summary view (fixes rightmost column cannot be resized).
+
 2014-03-07
 
 	* manual/ja/Makefile.am
